--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,5 +1,5 @@
 .container{
-    background-color: red;
+    background-color: rgb(58, 36, 58);
     height: 10vh;
     padding: 0px 50px;
     display: flex;
